--- a/angularapp/src/app/adminnotification/adminnotification.component.html
+++ b/angularapp/src/app/adminnotification/adminnotification.component.html
@@ -32,7 +32,7 @@
         <p><strong>User ID:</strong> {{ selectedUserDetails.userId }}</p>
         <p><strong>Email:</strong> {{ selectedUserDetails.email }}</p>
         <p><strong>Mobile Number:</strong> {{ selectedUserDetails.mobileNumber }}</p>
-        <p><strong>User Role:</strong> {{ selectedUserDetails.userRole }}</p>
+        <p><strong>Role:</strong> {{ selectedUserDetails.userRole }}</p>
       </div>
     </div>
   </div>
