--- a/angularapp/src/app/adminaddservice/adminaddservice.component.css
+++ b/angularapp/src/app/adminaddservice/adminaddservice.component.css
@@ -19,7 +19,7 @@ body {
 .container {
   max-width: 600px;
   padding: 20px;
-  background-color: white; /* Light black background */
+  background-color: white; /* Light background */
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(40, 39, 39, 0.1);
   animation: fadeIn 1s ease-in-out;
@@ -28,7 +28,7 @@ body {
  
 h2 {
   text-align: center;
-  color: black; /* White text for better contrast */
+  color: black; /* Black text for better contrast */
 }
  
 form div {
@@ -39,7 +39,7 @@ label {
   display: block;
   margin-bottom: 5px;
   font-weight: bold;
-  color: black; /* White text for better contrast */
+  color: black; /* Black text for better contrast */
 }
  
 input[type="text"],
@@ -81,7 +81,7 @@ button[type="submit"]:hover {
   left: 50%;
   transform: translate(-50%, -50%);
   padding: 20px;
-  background-color: #444; /* Slightly lighter black background */
+  background-color: #444; /* Slightly lighter background */
   border: 1px solid #ccc;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -98,8 +98,8 @@ button[type="submit"]:hover {
   display: block;
   margin: 0 auto;
   padding: 10px 20px;
-  background-color: #fff;
-  color: #575757;
+  background-color: #575757;
+  color: #fff;
   border: none;
   border-radius: 4px;
   cursor: pointer;
