--- a/angularapp/src/app/home/home.component.css
+++ b/angularapp/src/app/home/home.component.css
@@ -9,7 +9,7 @@ html {
 .background {
   background-size: cover;
   background-position: center;
-  height: 100px;
+  height: 100vh;
   /* Ensures the background covers the full viewport height */
   display: flex;
   justify-content: center;
