--- a/angularapp/src/app/navbar/navbar.component.css
+++ b/angularapp/src/app/navbar/navbar.component.css
@@ -6,6 +6,7 @@
     position: fixed; /* Fix the navbar at the top */
     top: 0; /* Position it at the top */
     left: 0; /* Align it to the left */
+    z-index: 9999;
 }
  
 
@@ -34,7 +35,10 @@
 
 .navbar-link:hover {
     background-color: #575757;
-}
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    border-radius: 20px;
+    transform: scale(1.05);
+  }
 
 .user-section {
     display: flex;
